# playlist

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  check_catalog.py  create_playlist.py  generate_playlist.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  COMPATIBILITY_MATRIX.md  E2E_TEST_STRATEGY.md  GOVERNANCE.md  INTEGRATION_PLAN.md  KNOWN_LIMITATIONS.md  MIGRATION_GUIDE.md  MULTI_PROVIDER_READINESS_AUDIT.md  OBSERVABILITY_ARCHITECTURE.md  OSS_READINESS_AUDIT.md  PLUGIN_PLATFORM_AUDIT.md  PRODUCT_VISION.md  PROVIDER_PLATFORM.md  QUALITY_AUDIT.md  README.md  RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  RELEASE_PLAN.md  ROADMAP.md  TECHNICAL_DEBT.md  TEST_COVERAGE_MAP.md  e2e-apple-gateway.md  ios-roadmap.md  musickit.md  sprint2-candidate-discovery.md  sprint2-resolver-v2.md  sprint2-smart-resolver.md
playlist_builder/: __init__.py
playlists/: e2e_absent.json  e2e_apple_gateway.json  orlando_pool_party_2026.json
schemas/: resonance-extension-manifest.schema.json
scripts/: check_all.sh  check_environment.py  setup_dev.sh
tests/: conftest.py  manual_acquisition_test_support.py  test_acquisition_production_policy.py  test_acquisition_strategy_experiments.py  test_app_icon_assets.py  test_app_import_playlist.py  test_apple_music_acquire_instrumentation.py  test_apple_music_acquire_script.py  test_apple_music_catalog_fallback.py  test_apple_music_catalog_ids.py  test_apple_music_delivery.py  test_apple_music_delivery_pacing.py  test_apple_music_library_acquisition.py  test_apple_music_manual_acquisition.py  test_apple_music_mapper_resolution.py  test_apple_music_playlist_read.py  test_apple_music_playlist_write.py  test_apple_music_resolver.py  test_atomic_json.py  test_autocomplete_bridge.py  test_bridge_command_contract.py  test_cache.py  test_canonical.py  test_check_environment.py  test_cli_create_playlist_flags.py  test_core.py  test_discovery_pipeline.py  test_e2e_import_mocked.py  test_error_humanizer.py  test_generate_playlist.py  test_generation.py  test_generation_fulfillment.py  test_identity_cache.py  (+62 more)
(+500 files in other folders)
