[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-builder"
version = "1.0.0"
description = "Multi-provider playlist composition and delivery platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
youtube = ["ytmusicapi>=1.7.0,<2"]

[project.scripts]
playlist-check-catalog = "playlist_builder.cli.check_catalog:main"
playlist-create = "playlist_builder.cli.create_playlist:main"
playlist-generate = "playlist_builder.cli.generate_playlist:main"

[tool.setuptools.packages.find]
include = ["playlist_builder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
